syntax="proto3";

package subdistrict;

option go_package="/";

import "google/protobuf/empty.proto";

service SubdistrictService {
    rpc GetAllSubdistricts(google.protobuf.Empty) returns (GetAllSubdistrictsResponse) {}
    rpc GetSubdistrictByID(GetSubdistrictByIDRequest) returns (GetSubdistrictByIDResponse) {}
    rpc GetSubdistrictsByIDs(GetSubdistrictsByIDsRequest) returns (GetSubdistrictsByIDsResponse) {}
    rpc InsertSubdistrict(InsertSubdistrictRequest) returns (InsertSubdistrictResponse) {}
    rpc InsertSubdistricts(InsertSubdistrictsRequest) returns (InsertSubdistrictsResponse) {}
    rpc UpdateSubdistrict(UpdateSubdistrictRequest) returns (UpdateSubdistrictResponse) {}
    rpc UpdateSubdistricts(UpdateSubdistrictsRequest) returns (UpdateSubdistrictsResponse) {}
    rpc DeleteSubdistrict(DeleteSubdistrictRequest) returns (DeleteSubdistrictResponse) {}
    rpc DeleteSubdistricts(DeleteSubdistrictsRequest) returns (DeleteSubdistrictsResponse) {}
}

// GetAllSubdistricts
message GetAllSubdistrictsResponse {
    Header header = 1;
    repeated SubdistrictData data = 2;
}

// GetSubdistrictByID
message GetSubdistrictByIDRequest {
    GetSubdistrictByIDInput request = 1;
}

message GetSubdistrictByIDInput {
    string id = 1;
}

message GetSubdistrictByIDResponse {
    Header header = 1;
    SubdistrictData data = 2;
}

// GetSubdistrictsByIDs
message GetSubdistrictsByIDsRequest {
    GetSubdistrictsByIDsInput request = 1;
}

message GetSubdistrictsByIDsInput {
    repeated string id = 1;
}

message GetSubdistrictsByIDsResponse {
    Header header = 1;
    repeated SubdistrictData data = 2;
}

// InsertSubdistrict
message InsertSubdistrictRequest {
    InsertSubdistrictInput request = 1;
}

message InsertSubdistrictInput {
    string subdistrictID = 1;
    string subdistrictName = 2;
    string subdistrictType = 3;
    string postalCode = 4;
    string districtID = 5;
}

message InsertSubdistrictResponse {
    Header header = 1;
    SubdistrictData data = 2;
}

// InsertSubdistricts
message InsertSubdistrictsRequest {
    repeated InsertSubdistrictInput request = 1;
}

message InsertSubdistrictsResponse {
    Header header = 1;
    repeated SubdistrictData data = 2;
}

// UpdateSubdistrict
message UpdateSubdistrictRequest {
    UpdateSubdistrictInput request = 1;
}

message UpdateSubdistrictInput {
    string subdistrictID = 1;
    OptionalString subdistrictName = 2;
    OptionalString subdistrictType = 3;
    OptionalString postalCode = 4;
    OptionalString districtID = 5;
}

message UpdateSubdistrictResponse {
    Header header = 1;
    SubdistrictData data = 2;
}

// UpdateSubdistricts
message UpdateSubdistrictsRequest {
    repeated UpdateSubdistrictInput request = 1;
}

message UpdateSubdistrictsResponse {
    Header header = 1;
    repeated SubdistrictData data = 2;
}

// DeleteSubdistrict
message DeleteSubdistrictRequest {
    DeleteSubdistrictInput request = 1;
}

message DeleteSubdistrictInput {
    string id = 1;
}

message DeleteSubdistrictResponse {
    Header header = 1;
    SubdistrictData data = 2;
}

// DeleteSubdistricts
message DeleteSubdistrictsRequest {
    DeleteSubdistrictsInput request = 1;
}

message DeleteSubdistrictsInput {
    repeated string id = 1;
}

message DeleteSubdistrictsResponse {
    Header header = 1;
    repeated SubdistrictData data = 2;
}

// Base Data
message SubdistrictData {
    string subdistrictID = 1;
    string subdistrictName = 2;
    string subdistrictType = 3;
    string postalCode = 4;
    string districtID = 5;
}

message Header {
    int32 status = 1;
    repeated string message = 2;
}

message OptionalString {
    string value = 1;
    bool hasSet = 2;
}
